display flex added to about container at > 600px to stop text overlap

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -238,6 +238,13 @@ body {
 
     .aboutContainer {
         padding-top: 2rem;
+        display: flex;
+    }
+
+    .aboutText {
+        width: 100%;
+        padding-left: 2rem;
+        font-size: 85%;
     }
 
     .image {
